--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-    <!-- <a href="./sites/dualipa.html">Dua Lipa</a> -->
     <div>
         <a href="./sites/dualipa.html" class="vid">
             <h1>Brazilian Girl Dancing to Dua Lipa</h1>
@@ -21,22 +20,27 @@
             <img src="./img/thumbnails/ari-love-cop-part1.png" alt="Physical">
         </a>
         <a href="./sites/sister-story.html" class="vid">
-            <h1>Sister story</h1>
+            <h1>Sister story Ari Love, Sweetkiss_69 och *Brazilian Girl*</h1>
             <img src="./img/thumbnails/ari_Love-sister-part1.png" alt="Physical">
         </a>
-        <a href="./sites/dualipa.html" class="vid">
-            <h1>Brazilian Girl Physical Dua Lipa</h1>
-            <img src="./img/thumbnails/physical_thumb.png" alt="Physical">
+        <a href="./sites/public.html" class="vid">
+            <h1>Public</h1>
+            <img src="./img/thumbnails/bralessforever-rocky-subway.png" alt="Physical">
         </a>
-        <a href="./sites/dualipa.html" class="vid">
-            <h1>Brazilian Girl Physical Dua Lipa</h1>
-            <img src="./img/thumbnails/physical_thumb.png" alt="Physical">
+        <a href="./sites/bellydancing.html" class="vid">
+            <h1>Belly dancing</h1>
+            <img src="./img/thumbnails/sloansmoans-sensual-sways.png" alt="Physical">
         </a>
-        <a href="./sites/dualipa.html" class="vid">
-            <h1>Brazilian Girl Physical Dua Lipa</h1>
-            <img src="./img/thumbnails/physical_thumb.png" alt="Physical">
+        <a href="./sites/youtube.html" class="vid">
+            <h1>Youtube and Pornhub</h1>
+            <img src="./img/thumbnails/claire_grimes-low-res.jpg" alt="Physical">
         </a>
     </div>
+    <footer>
+        <p>Yeet</p>
+        <p>Yeet</p>
+        <p>Dickpics</p>
+    </footer>
 </body>
 
 </html>
