--- a/sites/bellydancing.html
+++ b/sites/bellydancing.html
@@ -25,9 +25,8 @@
     </video>
     <h1>ruby_oharax Belly Dancing</h1>
     <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-        <source src="../vids/ruby_oharax Belly dancing.mov" type="video/mp4">
+        <source src="../vids/ruby_oharax Belly dancing.mp4" type="video/mp4">
     </video>
-    
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
