--- a/sites/cop-story.html
+++ b/sites/cop-story.html
@@ -13,11 +13,11 @@
     <a href="../index.html">Start</a>
     <h1>Ari Love cop part 1</h1>
     <video poster="../img/thumbnails/ari-love-cop-part1.png" controls>
-        <source src="../vids/(Custom) Ari Love Sph Cop 1.mp4" type="video/mp4">
+        <source src="../vids/Ari Love Cop part 1.mp4" type="video/mp4">
     </video>
     <h1>Ari Love cop part 2</h1>
     <video poster="../img/thumbnails/ari-love-cop-part2.png" controls>
-        <source src="../vids/(Custom) Ari Love Sph Cop 2.mov" type="video/mp4">
+        <source src="../vids/Ari Love Cop part 2.mp4" type="video/mp4">
     </video>
     <h1>Sweetkiss_69 cop part 1</h1>
     <video poster="../img/thumbnails/sweetkiss_69-cop-part1.png" controls>
