--- a/sites/dualipa.html
+++ b/sites/dualipa.html
@@ -15,8 +15,8 @@
     <video poster="../img/thumbnails/physical_thumb.png" controls>
         <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
     </video>
-    <h1>Waiting for her to be done!!! Brazilian Girl Levitating Dua Lipa</h1>
-    <video poster="../img/thumbnails/physical_thumb.png" controls>
+    <h1>ORDERED 24TH SEPTEMBER!! Brazilian Girl Levitating Dua Lipa</h1>
+    <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
         <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
     </video>
     <footer>
