--- a/sites/public.html
+++ b/sites/public.html
@@ -13,11 +13,11 @@
     <a href="../index.html">Start</a>
     <h1>BralessForever Rocky subway</h1>
     <video poster="../img/thumbnails/bralessforever-rocky-subway.png" controls>
-        <source src="../vids/Rocky - On The Subway.mp4" type="video/mp4">
+        <source src="../vids/BralessForeveer Rocky Subway.mp4" type="video/mp4">
     </video>
     <h1>Random</h1>
     <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-        <source src="../vids/JosephineJackson_BOUNCING-BOOBIES-IN-SLOW-MOTION.mov" type="video/mp4">
+        <source src="../vids/JosephineJackson Bouncing Boobs.mp4" type="video/mp4">
     </video>
     <h1>Jeny Smith NaughtyLada</h1>
     <video poster="../img/thumbnails/Jenny Smith NaughtyLada.png" controls>
