--- a/sites/sister-story.html
+++ b/sites/sister-story.html
@@ -13,11 +13,11 @@
     <a href="../index.html">Start</a>
     <h1>Ari Love Part 1</h1>
     <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-        <source src="../vids/Ari_Love-sister-part1.mp4" type="video/mp4">
+        <source src="../vids/Ari Love Sister Part 1.mp4" type="video/mp4">
     </video>
     <h1>Ari Love Part 2</h1>
     <video poster="../img/thumbnails/ari_Love-sister-part2.png" controls>
-        <source src="../vids/Ari_Love-sister-part2.mov" type="video/mp4">
+        <source src="../vids/Ari Love Sister Part 2.mp4" type="video/mp4">
     </video>
     <h1>Karma RX</h1>
     <video poster="../img/thumbnails/karmarx-sister.png" controls>
@@ -25,7 +25,7 @@
     </video>
     <h1>Sweetkiss_69</h1>
     <video poster="../img/thumbnails/sweetkiss_69-sister.png" controls>
-        <source src="../vids/Sweetkiss_69-sister.m4v" type="video/mp4">
+        <source src="../vids/Sweetkiss_69-sister.mp4" type="video/mp4">
     </video>
     <footer>
         <p>Yeet</p>
