--- a/sites/youtube.html
+++ b/sites/youtube.html
@@ -12,9 +12,13 @@
 <body>
     <a href="../index.html">Start</a>
     <h1>Caire Grimes</h1>
-    <iframe src="https://www.youtube.com/embed/12L0TooEwSQ" ></iframe>
+    <iframe src="https://www.youtube.com/embed/12L0TooEwSQ" allowfullscreen></iframe>
     <h1>Lindsey Leigh</h1>
-    <iframe src="https://www.pornhub.com/embed/ph5db81e33051f5"></iframe>    
+    <iframe src="https://www.pornhub.com/embed/ph5db81e33051f5" allowfullscreen></iframe>    
+    <h1>Random</h1>
+    <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
+        <source src="../vids/GoddessTripleDBabe_Locking-Up-Your-Yucky-Cock-Forever.mp4" type="video/mp4">
+    </video>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
