--- a/index.html
+++ b/index.html
@@ -7,33 +7,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NSFW</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/icons/Alisa_Amore-left-tit.png">
 </head>
 
 <body>
-    <div>
-        <a href="./sites/sister-story.html" class="vid">
-            <h1>Sister story Ari Love, Sweetkiss_69 och *Brazilian Girl*</h1>
-            <img src="./img/thumbnails/ari_Love-sister-part1.png" alt="Physical">
-        </a>
+    <a href="./sites/testing.html">TESTING</a>
+
+    <div>       
         <a href="./sites/cop-story.html" class="vid">
-            <h1>Cop story with Ari Love, Sweetkiss_69 and *Brazilian Girl*</h1>
-            <img src="./img/thumbnails/ari-love-cop-part1.png" alt="Physical">
+            <h1>Cop story with Ari Love, Sweetkiss_69, Karma RX and *Brazilian Girl*</h1>
+            <img src="./img/thumbnails/ari-love-cop-part1.png">
+        </a>
+        <a href="./sites/sister-story.html" class="vid">
+            <h1>Sister story with Ari Love, Sweetkiss_69 och *Brazilian Girl*</h1>
+            <img src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./sites/dualipa.html" class="vid">
+            <h1 class="hidden"> yeet</h1>
             <h1>Brazilian Girl Dancing to Dua Lipa</h1>
-            <img src="./img/thumbnails/physical_thumb.png" alt="Physical">
+            <img src="./img/thumbnails/physical_thumb.png">
         </a>
         <a href="./sites/public.html" class="vid">
             <h1>Public</h1>
-            <img src="./img/thumbnails/bralessforever-rocky-subway.png" alt="Physical">
+            <img src="./img/thumbnails/bralessforever-rocky-subway.png">
         </a>
         <a href="./sites/bellydancing.html" class="vid">
             <h1>Belly dancing</h1>
-            <img src="./img/thumbnails/sloansmoans-sensual-sways.png" alt="Physical">
+            <img src="./img/thumbnails/sloansmoans-sensual-sways.png">
         </a>
         <a href="./sites/youtube.html" class="vid">
             <h1>Youtube and Pornhub</h1>
-            <img src="./img/thumbnails/claire_grimes-low-res.jpg" alt="Physical">
+            <img src="./img/thumbnails/Claire Grimes Thumbnail.png">
+        </a>
+        <a href="./sites/cei.html" class="vid">
+            <h1>Cum Eating Instructions</h1>
+            <img src="./img/thumbnails/Lindsey_Leigh-cei.png">
+        </a>
+        <a href="./sites/humiliation.html" class="vid">
+            <h1>Humiliation (Sph, sissy)</h1>
+            <img src="./img/thumbnails/Lyra_Fae-sph-donate-sperm.png">
+        </a>
+        <a href="./sites/dark.html" class="vid">
+            <h1>Dark version</h1>
+            <img class="border" src="./img/thumbnails/ari-love-cop-part2-10.png">
+        </a>
+        <a href="./sites/bellybutton.html" class="vid">
+            <h1>Belly Button</h1>
+            <img src="./img/thumbnails/Ivi_Roses-belly-button-therapist.png">
+        </a>
+        <a href="./sites/trans.html" class="vid">
+            <h1>Trans</h1>
+            <img src="./img/thumbnails/Sarina-Valentina-pov-queen.png">
         </a>
     </div>
     <footer>
