--- a/sites/dark.html
+++ b/sites/dark.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dua Lipa</title>
+    <title>Dark</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
@@ -14,15 +14,15 @@
     <a href="../index.html">Start</a>
     <div class="videos">
         <article>
-            <h1>Brazilian Girl Physical Dua Lipa</h1>
-            <video poster="../img/thumbnails/physical_thumb.png" controls>
-                <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
+            <h1>Ari Love Cop part 2 10%</h1>
+            <video poster="../img/thumbnails/ari-love-cop-part2-10.png" controls>
+                <source src="../vids/Ari Love Cop part 2 10.mp4" type="video/mp4">
             </video>
         </article>
         <article>
-            <h1>ORDERED 24TH SEPTEMBER!! Brazilian Girl Levitating Dua Lipa</h1>
-            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
+            <h1>Lily_Fox custom 10%</h1>
+            <video poster="../img/thumbnails/Lily_Fox-custom-belly-button-10.png" controls>
+                <source src="../vids/Lily_Fox-custom-10.mp4" type="video/mp4">
             </video>
         </article>
     </div>
