--- a/sites/public.html
+++ b/sites/public.html
@@ -7,26 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Public</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
+    <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
 
 <body>
     <a href="../index.html">Start</a>
-    <h1>BralessForever Rocky subway</h1>
-    <video poster="../img/thumbnails/bralessforever-rocky-subway.png" controls>
-        <source src="../vids/BralessForeveer Rocky Subway.mp4" type="video/mp4">
-    </video>
-    <h1>Random</h1>
-    <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-        <source src="../vids/JosephineJackson Bouncing Boobs.mp4" type="video/mp4">
-    </video>
-    <h1>Jeny Smith NaughtyLada</h1>
-    <video poster="../img/thumbnails/Jenny Smith NaughtyLada.png" controls>
-        <source src="../vids/Jenny Smith NaughtyLada.mp4" type="video/mp4">
-    </video>
-    <h1>NaughtyLada left alone naked</h1>
-    <video poster="../img/thumbnails/NaughtyLada-left-alone-naked.png" controls>
-        <source src="../vids/NaughtyLada-left-alone-naked.mp4" type="video/mp4">
-    </video>
+    <div class="videos">
+        <article>
+            <h1>BralessForever Rocky subway.</h1>
+            <video poster="../img/thumbnails/bralessforever-rocky-subway.png" controls>
+                <source src="../vids/BralessForeveer Rocky Subway.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>ShyGothExhib Hoodie underboob!</h1>
+            <video poster="../img/thumbnails/ShyGoth-hoodie-underboob.png" controls>
+                <source src="../vids/ShyGoth Goth Hoodie Underboob!.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>ShyGothExhib Lakeside hike.</h1>
+            <video poster="../img/thumbnails/ShyGoth-nude-lakeside-hike.png" controls>
+                <source src="../vids/ShyGoth Nude Lakeside Hike.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>ShyGothExhib Topless bar district.</h1>
+            <video poster="../img/thumbnails/ShyGoth-Topless-Bar-District.png" controls>
+                <source src="../vids/ShyGoth Topless Bar District Selfie Walk.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Jeny Smith NaughtyLada girls walk.</h1>
+            <video poster="../img/thumbnails/Jenny Smith NaughtyLada.png" controls>
+                <source src="../vids/Jenny Smith NaughtyLada.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>NaughtyLada left alone naked.</h1>
+            <video poster="../img/thumbnails/NaughtyLada-left-alone-naked.png" controls>
+                <source src="../vids/NaughtyLada-left-alone-naked.mp4" type="video/mp4">
+            </video>
+        </article>
+    </div>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
