--- a/sites/youtube.html
+++ b/sites/youtube.html
@@ -7,18 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube and Pornhub</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
+    <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
 
 <body>
     <a href="../index.html">Start</a>
-    <h1>Caire Grimes</h1>
-    <iframe src="https://www.youtube.com/embed/12L0TooEwSQ" allowfullscreen></iframe>
-    <h1>Lindsey Leigh</h1>
-    <iframe src="https://www.pornhub.com/embed/ph5db81e33051f5" allowfullscreen></iframe>    
-    <h1>Random</h1>
-    <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-        <source src="../vids/GoddessTripleDBabe_Locking-Up-Your-Yucky-Cock-Forever.mp4" type="video/mp4">
-    </video>
+    <div class="videos">
+        <article>
+            <h1>Claire Grimes</h1>
+            <iframe src="https://www.youtube.com/embed/12L0TooEwSQ" allowfullscreen></iframe>
+        </article>
+        <article>
+            <h1>Lindsey Leigh</h1>
+            <iframe src="https://www.pornhub.com/embed/ph5db81e33051f5" allowfullscreen></iframe>
+        </article>
+        <article>
+            <h1>Random</h1>
+            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
+                <source src="../vids/GoddessTripleDBabe_Locking-Up-Your-Yucky-Cock-Forever.mp4" type="video/mp4">
+            </video>
+        </article>
+    </div>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
