--- a/sites/bellydancing.html
+++ b/sites/bellydancing.html
@@ -7,26 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Belly Dancing</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
+    <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
 
 <body>
     <a href="../index.html">Start</a>
-    <h1>Sloansmoans Sensual Sways</h1>
-    <video poster="../img/thumbnails/sloansmoans-sensual-sways.png" controls>
-        <source src="../vids/sloansmoans sensualsways.mp4" type="video/mp4">
-    </video>
-    <h1>Alicebalij Oriental Dance</h1>
-    <video poster="../img/thumbnails/alicebalij-oriental-dance.png" controls>
-        <source src="../vids/alicebalij Oriental Dance.mp4" type="video/mp4">
-    </video>
-    <h1>TripleDBabe Belly Dancing</h1>
-    <video poster="../img/thumbnails/tripledbabe-belly-dancing.png" controls>
-        <source src="../vids/TripleDBabe BELLY DANCING.mp4" type="video/mp4">
-    </video>
-    <h1>ruby_oharax Belly Dancing</h1>
-    <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-        <source src="../vids/ruby_oharax Belly dancing.mp4" type="video/mp4">
-    </video>
+    <div class="videos">
+        <article>
+            <h1>Sloansmoans Sensual Sways</h1>
+            <video poster="../img/thumbnails/sloansmoans-sensual-sways.png" controls>
+                <source src="../vids/sloansmoans sensualsways.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Alicebalij Oriental Dance</h1>
+            <video poster="../img/thumbnails/alicebalij-oriental-dance.png" controls>
+                <source src="../vids/alicebalij Oriental Dance.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>TripleDBabe Belly Dancing</h1>
+            <video poster="../img/thumbnails/tripledbabe-belly-dancing.png" controls>
+                <source src="../vids/TripleDBabe BELLY DANCING.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+        <h1>ruby_oharax Belly Dancing</h1>
+        <video poster="../img/thumbnails/ruby_oharax-Belly-dancing.png" controls>
+            <source src="../vids/ruby_oharax Belly dancing.mp4" type="video/mp4">
+        </video>
+        </article>
+        <article>
+            <h1>Lissie Belle</h1>
+            <video poster="../img/thumbnails/Lissie_Belle-belly-dancing.png" controls>
+                <source src="../vids/Lissie Belle Long Skirt Belly Dance.mp4" type="video/mp4">
+            </video>
+            </article>
+    </div>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
