--- a/sites/cop-story.html
+++ b/sites/cop-story.html
@@ -7,26 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cop Story</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
+    <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
 
 <body>
     <a href="../index.html">Start</a>
-    <h1>Ari Love cop part 1</h1>
-    <video poster="../img/thumbnails/ari-love-cop-part1.png" controls>
-        <source src="../vids/Ari Love Cop part 1.mp4" type="video/mp4">
-    </video>
-    <h1>Ari Love cop part 2</h1>
-    <video poster="../img/thumbnails/ari-love-cop-part2.png" controls>
-        <source src="../vids/Ari Love Cop part 2.mp4" type="video/mp4">
-    </video>
-    <h1>Sweetkiss_69 cop part 1</h1>
-    <video poster="../img/thumbnails/sweetkiss_69-cop-part1.png" controls>
-        <source src="../vids/Sweetkiss_69-cop-part1.mp4" type="video/mp4">
-    </video>
-    <h1>Sweetkiss_69 cop part 2</h1>
-    <video poster="../img/thumbnails/sweetkiss_69-cop-part2.png" controls>
-        <source src="../vids/Sweetkiss_69-cop-part2.mp4" type="video/mp4">
-    </video>
+    <div class="videos">
+        <article>
+            <h1>Ari Love cop part 1</h1>
+            <video poster="../img/thumbnails/ari-love-cop-part1.png" controls>
+                <source src="../vids/Ari Love Cop part 1.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Ari Love cop part 2</h1>
+            <video poster="../img/thumbnails/ari-love-cop-part2.png" controls>
+                <source src="../vids/Ari Love Cop part 2.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Sweetkiss_69 cop part 1</h1>
+            <video poster="../img/thumbnails/sweetkiss_69-cop-part1.png" controls>
+                <source src="../vids/Sweetkiss_69-cop-part1.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Sweetkiss_69 cop part 2</h1>
+            <video poster="../img/thumbnails/sweetkiss_69-cop-part2.png" controls>
+                <source src="../vids/Sweetkiss_69-cop-part2.mp4" type="video/mp4">
+            </video>
+        </article>
+    </div>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
