--- a/sites/sister-story.html
+++ b/sites/sister-story.html
@@ -7,26 +7,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sister Story</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
+    <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
 
 <body>
     <a href="../index.html">Start</a>
-    <h1>Ari Love Part 1</h1>
-    <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-        <source src="../vids/Ari Love Sister Part 1.mp4" type="video/mp4">
-    </video>
-    <h1>Ari Love Part 2</h1>
-    <video poster="../img/thumbnails/ari_Love-sister-part2.png" controls>
-        <source src="../vids/Ari Love Sister Part 2.mp4" type="video/mp4">
-    </video>
-    <h1>Karma RX</h1>
-    <video poster="../img/thumbnails/karmarx-sister.png" controls>
-        <source src="../vids/KarmaRX-sister.mp4" type="video/mp4">
-    </video>
-    <h1>Sweetkiss_69</h1>
-    <video poster="../img/thumbnails/sweetkiss_69-sister.png" controls>
-        <source src="../vids/Sweetkiss_69-sister.mp4" type="video/mp4">
-    </video>
+    <div class="videos">
+        <article>
+            <h1>Ari Love Part 1</h1>
+            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
+                <source src="../vids/Ari Love Sister Part 1.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Ari Love Part 2</h1>
+            <video poster="../img/thumbnails/ari_Love-sister-part2.png" controls>
+                <source src="../vids/Ari Love Sister Part 2.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Karma RX</h1>
+            <video poster="../img/thumbnails/karmarx-sister.png" controls>
+                <source src="../vids/KarmaRX-sister.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Sweetkiss_69</h1>
+            <video poster="../img/thumbnails/sweetkiss_69-sister.png" controls>
+                <source src="../vids/Sweetkiss_69-sister.mp4" type="video/mp4">
+            </video>
+        </article>
+    </div>
     <footer>
         <p>Yeet</p>
         <p>Yeet</p>
