--- a/sites/dark.html
+++ b/sites/dark.html
@@ -25,6 +25,12 @@
                 <source src="../vids/Lily_Fox-custom-10.mp4" type="video/mp4">
             </video>
         </article>
+        <article>
+            <h1>Ivi Roses SPH SPE 10%</h1>
+            <video poster="../img/thumbnails/Ivi_Roses-sph-spe-dark.png" controls>
+                <source src="../vids/Ivi_Roses-sph-spe-10.mp4" type="video/mp4">
+            </video>
+        </article>
     </div>
     <footer>
         <p>Yeet</p>
