--- a/sites/testing.html
+++ b/sites/testing.html
@@ -19,7 +19,7 @@
         </article>
         <article>
             <h1>Random Youtube NO ADS???????</h1>
-            <iframe src="https://www.youtube.com/embed/95Jxv0cjWN4" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/wmfDsCqwSAQ" allowfullscreen></iframe>
         </article>
         <article>
             <h1>Lindsey Leigh</h1>
@@ -28,11 +28,17 @@
         <article>
             <h1>Random</h1>
             <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/Ari Love Cop part 2 10.mp4" type="video/mp4">
+                <source src="../vids/August Ames ames to please.mp4" type="video/mp4">
             </video>
         </article>
         <article>
             <h1>JosephineJackson Tina Fire</h1>
+            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
+                <source src="../vids/rkprime.22.05.24.josephine.jackson.and.tina.fire.big.bana-turals.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Kendra Lust</h1>
             <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
                 <source src="../vids/milfhunter.18.10.08.kendra.lust.kendras.workout.mp4" type="video/mp4">
             </video>
