--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <img src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./sites/dualipa.html" class="vid">
-            <h1 class="hidden"> yeet</h1>
-            <h1>Brazilian Girl Dancing to Dua Lipa</h1>
-            <img src="./img/thumbnails/physical_thumb.png">
+            <!-- <h1 class="hidden"> yeet</h1> -->
+            <h1>Brazilian Girl Dancing to Dua Lipa Physical and *Levitating*</h1>
+            <img src="./img/thumbnails/brazilian_girl-dua-lipa-physical.png">
         </a>
         <a href="./sites/public.html" class="vid">
             <h1>Public</h1>
@@ -58,6 +58,10 @@
         <a href="./sites/trans.html" class="vid">
             <h1>Trans</h1>
             <img src="./img/thumbnails/Sarina-Valentina-pov-queen.png">
+        </a>
+        <a href="./sites/custom.html" class="vid">
+            <h1>Customs</h1>
+            <img src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
     </div>
     <footer>
