--- a/sites/custom-littlecsophie1.html
+++ b/sites/custom-littlecsophie1.html
@@ -5,24 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dua Lipa</title>
+    <title>LittleCSophie1 Customs</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
 </head>
 
 <body>
     <a href="../index.html">Start</a>
+    <a href="./custom.html">Back to customs</a>
     <div class="videos">
         <article>
-            <h1>Brazilian Girl Physical Dua Lipa</h1>
-            <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical.png" controls>
-                <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <h1>ORDERED 24TH SEPTEMBER!! Brazilian Girl Levitating Dua Lipa</h1>
-            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
+            <h1>LittleCSophie1 Belly button playing</h1>
+            <video poster="../img/thumbnails/LittleCSophie1-belly-button-custom.png" controls>
+                <source src="../vids/LittleCSophie1-belly-button-custom.mp4" type="video/mp4">
             </video>
         </article>
     </div>
