--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <div>       
         <a href="./sites/cop-story.html" class="vid">
-            <h1>Cop story with Ari Love, Sweetkiss_69, Karma RX and *Brazilian Girl*</h1>
+            <h1>Cop story with Ari Love, Sweetkiss_69 and *Brazilian Girl*</h1>
             <img src="./img/thumbnails/ari-love-cop-part1.png">
         </a>
         <a href="./sites/sister-story.html" class="vid">
-            <h1>Sister story with Ari Love, Sweetkiss_69 och *Brazilian Girl*</h1>
+            <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX and *Brazilian Girl*</h1>
             <img src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./sites/dualipa.html" class="vid">
