--- a/sites/cop-story.html
+++ b/sites/cop-story.html
@@ -37,6 +37,12 @@
                 <source src="../vids/Sweetkiss_69-cop-part2.mp4" type="video/mp4">
             </video>
         </article>
+        <article>
+            <h1>Brazilian Girl cop part 1 *Ordered September 9th*</h1>
+            <video poster="../img/thumbnails/brazilian_girl-cop-custom.png" controls>
+                <source src="../vids/Brazilian Girl Cop Custom.mp4" type="video/mp4">
+            </video>
+        </article>
     </div>
     <footer>
         <p>Yeet</p>
