--- a/sites/custom-brazilian-girl.html
+++ b/sites/custom-brazilian-girl.html
@@ -20,6 +20,12 @@
                 <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
             </video>
         </article>
+        <article>
+            <h1>Brazilian Girl Levitating Dua Lipa</h1>
+            <video poster="../img/thumbnails/brazilian_girl-dua-lipa-levitating.png" controls>
+                <source src="../vids/Brazilian Girl Levitating Dua Lipa.mp4" type="video/mp4">
+            </video>
+        </article>
     </div>
     <footer>
         <p>Yeet</p>
