--- a/sites/dualipa.html
+++ b/sites/dualipa.html
@@ -20,9 +20,9 @@
             </video>
         </article>
         <article>
-            <h1>ORDERED 24TH SEPTEMBER!! Brazilian Girl Levitating Dua Lipa</h1>
-            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
+            <h1>Brazilian Girl Levitating Dua Lipa</h1>
+            <video poster="../img/thumbnails/brazilian_girl-dua-lipa-levitating.png" controls>
+                <source src="../vids/Brazilian Girl Levitating Dua Lipa.mp4" type="video/mp4">
             </video>
         </article>
     </div>
