--- a/sites/public.html
+++ b/sites/public.html
@@ -16,7 +16,31 @@
         <article>
             <h1>BralessForever Rocky subway.</h1>
             <video poster="../img/thumbnails/bralessforever-rocky-subway.png" controls>
-                <source src="../vids/BralessForeveer Rocky Subway.mp4" type="video/mp4">
+                <source src="../vids/BralessForever Rocky Subway.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>BralessForever Rocky Marce Naked drive.</h1>
+            <video poster="../img/gifs/bralessforever-rocky-marce-drive.gif" controls>
+                <source src="../vids/BralessForever Rocky and Marce Naked Drive.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>BralessForever Rocky Voyeur beach reactions.</h1>
+            <video poster="../img/gifs/bralessforever-rocky-marce-drive.gif" controls>
+                <source src="../vids/BralessForever Rocky Voyeur Beach Cam Reaction.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>BralessForever Rocky and Emma G</h1>
+            <video poster="../img/gifs/bralessforever-rocky-marce-drive.gif" controls>
+                <source src="../vids/BralessForever Rocky Emma G.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>BralessForever Rocky Nude hike</h1>
+            <video poster="../img/gifs/bralessforever-rocky-marce-drive.gif" controls>
+                <source src="../vids/BralessForever Rocky Nude hike.mp4" type="video/mp4">
             </video>
         </article>
         <article>
