--- a/sites/sister-story.html
+++ b/sites/sister-story.html
@@ -14,27 +14,33 @@
     <a href="../index.html">Start</a>
     <div class="videos">
         <article>
-            <h1>Ari Love Part 1</h1>
+            <h1>Ari Love Sister part 1</h1>
             <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
                 <source src="../vids/Ari Love Sister Part 1.mp4" type="video/mp4">
             </video>
         </article>
         <article>
-            <h1>Ari Love Part 2</h1>
+            <h1>Ari Love Sister part 2</h1>
             <video poster="../img/thumbnails/ari_Love-sister-part2.png" controls>
                 <source src="../vids/Ari Love Sister Part 2.mp4" type="video/mp4">
             </video>
         </article>
         <article>
-            <h1>Karma RX</h1>
+            <h1>Karma RX Sister</h1>
             <video poster="../img/thumbnails/karmarx-sister.png" controls>
                 <source src="../vids/KarmaRX-sister.mp4" type="video/mp4">
             </video>
         </article>
         <article>
-            <h1>Sweetkiss_69</h1>
+            <h1>Sweetkiss_69 Sister</h1>
             <video poster="../img/thumbnails/sweetkiss_69-sister.png" controls>
                 <source src="../vids/Sweetkiss_69-sister.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Brazilian Girl Sister *Ordered August 28th + 10 pics*</h1>
+            <video poster="../img/thumbnails/brazilian_girl-sister-custom.png" controls>
+                <source src="../vids/brazilian_girl-sister-custom.mp4" type="video/mp4">
             </video>
         </article>
     </div>
