--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </a>
         <a href="./sites/dualipa.html" class="vid">
             <!-- <h1 class="hidden"> yeet</h1> -->
-            <h1>Brazilian Girl Dancing to Dua Lipa Physical and *Levitating*</h1>
+            <h1>Brazilian Girl Dancing to Dua Lipa Physical and Levitating</h1>
             <img src="./img/thumbnails/brazilian_girl-dua-lipa-physical.png">
         </a>
         <a href="./sites/public.html" class="vid">
