--- a/sites/dualipa.html
+++ b/sites/dualipa.html
@@ -14,15 +14,21 @@
     <a href="../index.html">Start</a>
     <div class="videos">
         <article>
-            <h1>Brazilian Girl Physical Dua Lipa</h1>
+            <h1>Brazilian Girl Physical by Dua Lipa</h1>
             <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical.png" controls>
-                <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
+                <source src="../vids/Brazilian girl dancing Physical by Dua Lipa.mp4" type="video/mp4">
             </video>
         </article>
         <article>
-            <h1>Brazilian Girl Levitating Dua Lipa</h1>
+            <h1>Brazilian Girl Levitating by Dua Lipa</h1>
             <video poster="../img/thumbnails/brazilian_girl-dua-lipa-levitating.png" controls>
-                <source src="../vids/Brazilian Girl Levitating Dua Lipa.mp4" type="video/mp4">
+                <source src="../vids/Brazilian girl dancing Levitating by Dua Lipa.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Brazilian Girl Physical and Levitating by Dua Lipa</h1>
+            <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical.png" controls>
+                <source src="../vids/Brazilian girl dancing Physical and Levitating by Dua Lipa.mp4" type="video/mp4">
             </video>
         </article>
     </div>
