--- a/sites/public.html
+++ b/sites/public.html
@@ -27,20 +27,20 @@
         </article>
         <article>
             <h1>BralessForever Rocky Voyeur beach reactions.</h1>
-            <video poster="../img/gifs/bralessforever-rocky-marce-drive.gif" controls>
+            <video poster="../img/thumbnails/BralessForever-Rocky-beach-reactions.png" controls>
                 <source src="../vids/BralessForever Rocky Voyeur Beach Cam Reaction.mp4" type="video/mp4">
             </video>
         </article>
         <article>
-            <h1>BralessForever Rocky and Emma G</h1>
-            <video poster="../img/gifs/bralessforever-rocky-marce-drive.gif" controls>
-                <source src="../vids/BralessForever Rocky Emma G.mp4" type="video/mp4">
+            <h1>BralessForever Rocky Nude hike</h1>
+            <video poster="../img/thumbnails/BralessForever-Rocky-nude-hike.png" controls>
+                <source src="../vids/BralessForever Rocky Nude hike.mp4" type="video/mp4">
             </video>
         </article>
         <article>
-            <h1>BralessForever Rocky Nude hike</h1>
-            <video poster="../img/gifs/bralessforever-rocky-marce-drive.gif" controls>
-                <source src="../vids/BralessForever Rocky Nude hike.mp4" type="video/mp4">
+            <h1>BralessForever Rocky and Marce nude beach</h1>
+            <video poster="../img/thumbnails/BralessForever-Rocky-Marce-nude-beach.png" controls>
+                <source src="../vids/BralessForever Rocky Marce Nude Beach.mp4" type="video/mp4">
             </video>
         </article>
         <article>
