--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./img/thumbnails/ari-love-cop-part1.png">
         </a>
         <a href="./sites/sister-story.html" class="vid">
-            <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX and *Brazilian Girl*</h1>
+            <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX and Brazilian Girl</h1>
             <img src="./img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./sites/dualipa.html" class="vid">
@@ -29,7 +29,7 @@
         </a>
         <a href="./sites/public.html" class="vid">
             <h1>Public</h1>
-            <img src="./img/thumbnails/bralessforever-rocky-subway.png">
+            <img src="./img/gifs/bralessforever-rocky-marce-drive.gif">
         </a>
         <a href="./sites/bellydancing.html" class="vid">
             <h1>Belly dancing</h1>
@@ -45,7 +45,7 @@
         </a>
         <a href="./sites/humiliation.html" class="vid">
             <h1>Humiliation (Sph, sissy)</h1>
-            <img src="./img/thumbnails/Lyra_Fae-sph-donate-sperm.png">
+            <img src="./img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
         </a>
         <a href="./sites/dark.html" class="vid">
             <h1>Dark version</h1>
