--- a/sites/public.html
+++ b/sites/public.html
@@ -26,12 +26,6 @@
             </video>
         </article>
         <article>
-            <h1>BralessForever Rocky Voyeur beach reactions.</h1>
-            <video poster="../img/thumbnails/BralessForever-Rocky-beach-reactions.png" controls>
-                <source src="../vids/BralessForever Rocky Voyeur Beach Cam Reaction.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
             <h1>BralessForever Rocky Nude hike</h1>
             <video poster="../img/thumbnails/BralessForever-Rocky-nude-hike.png" controls>
                 <source src="../vids/BralessForever Rocky Nude hike.mp4" type="video/mp4">
@@ -41,6 +35,12 @@
             <h1>BralessForever Rocky and Marce nude beach</h1>
             <video poster="../img/thumbnails/BralessForever-Rocky-Marce-nude-beach.png" controls>
                 <source src="../vids/BralessForever Rocky Marce Nude Beach.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>BralessForever Rocky and Marce bondage</h1>
+            <video poster="../img/thumbnails/BralessForever-Rocky-Marce-bondage.png" controls>
+                <source src="../vids/BralessForever Rocky and Marce Bondage.mp4" type="video/mp4">
             </video>
         </article>
         <article>
@@ -59,18 +59,6 @@
             <h1>ShyGothExhib Topless bar district.</h1>
             <video poster="../img/thumbnails/ShyGoth-Topless-Bar-District.png" controls>
                 <source src="../vids/ShyGoth Topless Bar District Selfie Walk.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <h1>Jeny Smith NaughtyLada girls walk.</h1>
-            <video poster="../img/thumbnails/Jenny Smith NaughtyLada.png" controls>
-                <source src="../vids/Jenny Smith NaughtyLada.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <h1>NaughtyLada left alone naked.</h1>
-            <video poster="../img/thumbnails/NaughtyLada-left-alone-naked.png" controls>
-                <source src="../vids/NaughtyLada-left-alone-naked.mp4" type="video/mp4">
             </video>
         </article>
     </div>
