--- a/sites/sister-story.html
+++ b/sites/sister-story.html
@@ -38,9 +38,9 @@
             </video>
         </article>
         <article>
-            <h1>Brazilian Girl Sister *Ordered August 28th + 10 pics*</h1>
+            <h1>Brazilian Girl Sister *Waiting for 10 pics*</h1>
             <video poster="../img/thumbnails/brazilian_girl-sister-custom.png" controls>
-                <source src="../vids/brazilian_girl-sister-custom.mp4" type="video/mp4">
+                <source src="../vids/Brazilian girl Sister.mp4" type="video/mp4">
             </video>
         </article>
     </div>
