--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>       
         <a href="./sites/cop-story.html" class="vid">
             <h1>Cop story with Ari Love, Sweetkiss_69 and *Brazilian Girl*</h1>
-            <img src="./img/thumbnails/ari-love-cop-part1.png">
+            <img src="./img/gifs/Sweetkiss_69-cop-part2.gif">
         </a>
         <a href="./sites/sister-story.html" class="vid">
             <h1>Sister story with Ari Love, Sweetkiss_69, Karma RX and Brazilian Girl</h1>
@@ -46,10 +46,6 @@
         <a href="./sites/humiliation.html" class="vid">
             <h1>Humiliation (Sph, sissy)</h1>
             <img src="./img/thumbnails/NaturalNadia-custom-sph-joi-horizontal.png">
-        </a>
-        <a href="./sites/dark.html" class="vid">
-            <h1>Dark version</h1>
-            <img class="border" src="./img/thumbnails/ari-love-cop-part2-10.png">
         </a>
         <a href="./sites/bellybutton.html" class="vid">
             <h1>Belly Button</h1>
