--- a/sites/bellybutton.html
+++ b/sites/bellybutton.html
@@ -26,7 +26,13 @@
             </video>
         </article>
         <article>
-            <h1>Lily_Fox</h1>
+            <h1>LittleCSophie1 Belly button custom</h1>
+            <video poster="../img/thumbnails/LittleCSophie1-belly-button-custom.png" controls>
+                <source src="../vids/LittleCSophie1-belly-button-custom.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Lily_Fox Belly Button Custom</h1>
             <video poster="../img/thumbnails/Lily_Fox-custom-belly-button.png" controls>
                 <source src="../vids/Lily_Fox Custom.mov" type="video/mp4">
             </video>
