--- a/sites/custom.html
+++ b/sites/custom.html
@@ -18,7 +18,7 @@
             <img src="../img/thumbnails/ari_Love-sister-part1.png">
         </a>
         <a href="./custom-brazilian-girl.html" class="vid">
-            <h1>Brazilian Girl *Waiting for 2 videos*</h1>
+            <h1>Brazilian Girl *Waiting for 1 video*</h1>
             <img src="../img/thumbnails/brazilian_girl-dua-lipa-physical.png">
         </a>
         <a href="./custom-ccflight.html" class="vid">
@@ -34,7 +34,7 @@
             <img src="../img/thumbnails/Lily_Fox-custom-belly-button.png">
         </a>
         <a href="./custom-littlecsophie1.html" class="vid">
-            <h1>LittleCSophie1 *Waiting on 1 video*</h1>
+            <h1>LittleCSophie1</h1>
             <img src="../img/thumbnails/LittleCSophie1-belly-button-custom.png">
         </a>        
         <a href="./custom-naturalnadia.html" class="vid">
