--- a/sites/sister-story.html
+++ b/sites/sister-story.html
@@ -8,10 +8,15 @@
     <title>Sister Story</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/sister.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
             <h1>Ari Love Sister part 1</h1>
@@ -38,8 +43,8 @@
             </video>
         </article>
         <article>
-            <h1>Brazilian Girl Sister *Waiting for 10 pics*</h1>
-            <video poster="../img/thumbnails/brazilian_girl-sister-custom.png" controls>
+            <h1>Brazilian Girl Sister</h1>
+            <video poster="../img/thumbnails/brazilian_girl-sister-custom.jpg" controls>
                 <source src="../vids/Brazilian girl Sister.mp4" type="video/mp4">
             </video>
         </article>
