--- a/sites/testing.html
+++ b/sites/testing.html
@@ -8,46 +8,27 @@
     <title>Testing</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/testing.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
+    <div id="vWrap">
+        <video controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
-        <article>
-            <h1>Spankbang Not HD in Embeded Gabbie Carter</h1>
-            <iframe src="https://se.spankbang.com/46uld/embed/" allowfullscreen></iframe>
-        </article>
         <article>
             <h1>Random Youtube NO ADS???????</h1>
             <iframe src="https://www.youtube.com/embed/4BVJE2977ws" allowfullscreen></iframe>
         </article>
         <article>
+            <h1>Spankbang Not HD in Embeded Gabbie Carter</h1>
+            <iframe src="https://se.spankbang.com/46uld/embed/" allowfullscreen></iframe>
+        </article>
+        <article>
             <h1>Lindsey Leigh</h1>
             <iframe src="https://www.pornhub.com/embed/ph5db81e33051f5" allowfullscreen></iframe>
-        </article>
-        <article>
-            <h1>Random</h1>
-            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/August Ames ames to please.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <h1>JosephineJackson Tina Fire</h1>
-            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/rkprime.22.05.24.josephine.jackson.and.tina.fire.big.bana-turals.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <h1>Kendra Lust</h1>
-            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/milfhunter.18.10.08.kendra.lust.kendras.workout.mp4" type="video/mp4">
-            </video>
-        </article>
-        <article>
-            <h1>Nicole Belle workout</h1>
-            <video poster="../img/thumbnails/ari_Love-sister-part1.png" controls>
-                <source src="../vids/NicoleBelle_Humiliation-workout-for-this-slut.mp4" type="video/mp4">
-            </video>
         </article>
     </div>
     <footer>
