--- a/sites/cop-story.html
+++ b/sites/cop-story.html
@@ -8,10 +8,15 @@
     <title>Cop Story</title>
     <link rel="stylesheet" href="../css/vidstyle.css">
     <link rel="icon" href="../img/icons/Alisa_Amore-left-tit.png">
+    <script defer src="../scipts/cop.js"></script>
 </head>
 
 <body>
     <a href="../index.html">Start</a>
+    <div id="vWrap">
+        <video poster="../img/thumbnails/ari-love-cop-part1.png" controls id="vVid"></video>
+        <div id="vList"></div>
+    </div>
     <div class="videos">
         <article>
             <h1>Ari Love cop part 1</h1>
