--- a/sites/custom-brazilian-girl.html
+++ b/sites/custom-brazilian-girl.html
@@ -17,13 +17,19 @@
         <article>
             <h1>Brazilian Girl Physical Dua Lipa</h1>
             <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical.png" controls>
-                <source src="../vids/Brazilian Girl Physical Dua Lipa.mp4" type="video/mp4">
+                <source src="../vids/Brazilian girl dancing Physical by Dua Lipa.mp4" type="video/mp4">
             </video>
         </article>
         <article>
             <h1>Brazilian Girl Levitating Dua Lipa</h1>
             <video poster="../img/thumbnails/brazilian_girl-dua-lipa-levitating.png" controls>
-                <source src="../vids/Brazilian Girl Levitating Dua Lipa.mp4" type="video/mp4">
+                <source src="../vids/Brazilian girl dancing Levitating by Dua Lipa.mp4" type="video/mp4">
+            </video>
+        </article>
+        <article>
+            <h1>Brazilian Girl Physical Dua Lipa 2</h1>
+            <video poster="../img/thumbnails/brazilian_girl-dua-lipa-physical-2.png" controls>
+                <source src="../vids/Brazilian girl dancing Physical by Dua Lipa 2.mp4" type="video/mp4">
             </video>
         </article>
     </div>
