--- a/sites/custom-littlecsophie1.html
+++ b/sites/custom-littlecsophie1.html
@@ -15,7 +15,7 @@
     <a href="./custom.html">Back to customs</a>
     <div class="videos">
         <article>
-            <h1>LittleCSophie1 Belly button playing</h1>
+            <h1>LittleCSophie1 Belly button custom</h1>
             <video poster="../img/thumbnails/LittleCSophie1-belly-button-custom.png" controls>
                 <source src="../vids/LittleCSophie1-belly-button-custom.mp4" type="video/mp4">
             </video>
